added IP container

--- a/ThreadPool/CMakeLists.txt
+++ b/ThreadPool/CMakeLists.txt
@@ -10,7 +10,7 @@ add_executable (ThreadPoolProject "main.cpp")
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library(ThreadPool STATIC "ThreadPool.cpp" "ThreadPool.h" "functionwrapper.h" "${CMAKE_SOURCE_DIR}/ThreadPool/threadsafe_queue/atomic_threadsafe_queue/threadsafe_queue.cpp")
+add_library(ThreadPool STATIC "ThreadPool.cpp" "ThreadPool.h" "functionwrapper.h")
 
 if(${ATOMIC})
 	set(threadsafe_queue_directory "atomic_threadsafe_queue")
@@ -21,10 +21,11 @@ endif()
 target_sources(
 		ThreadPool
 		INTERFACE "${CMAKE_SOURCE_DIR}/ThreadPool/threadsafe_queue/${threadsafe_queue_directory}/threadsafe_queue.h"
-		PRIVATE "${CMAKE_SOURCE_DIR}/ThreadPool/threadsafe_queue/${threadsafe_queue_directory}/threadsafe_queue.cpp"
 		PRIVATE "threadsafe_queue/misc.cpp"
 )
+
 include_directories("${CMAKE_SOURCE_DIR}/ThreadPool/threadsafe_queue/${threadsafe_queue_directory}/")
+include_directories("${CMAKE_SOURCE_DIR}/ThreadPool/threadsafe_queue/misc.cpp")
 
 target_link_libraries(ThreadPoolProject ThreadPool)
 # TODO: Добавьте тесты и целевые объекты, если это необходимо.
